--- a/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
+++ b/PreAcademicInfoFront/webapp/src/app/student/home/home.component.html
@@ -1,42 +1,44 @@
 <app-navigation></app-navigation>
-<div >
+<div>
   <mat-divider></mat-divider>
 </div>
 <div class="afis">
-<div class="selectors">
-  <mat-form-field class="select">
-    <mat-select class = "white" (selectionChange)="onChangeAn($event)"  placeholder="An" >
-      <mat-option   *ngFor="let an  of ani"  [value]="an.value" >
-        {{an.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-  <mat-form-field class="select">
-    <mat-select class = "white" (selectionChange)="onChangeSemestru($event)"  placeholder="Semestru">
-      <mat-option *ngFor="let semestru  of semestre" [value]="semestru.value">
-        {{semestru.viewValue}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
-  &nbsp;&nbsp;&nbsp;&nbsp;
-</div>
-  <table mat-table
-         matSort (matSortChange)="sortList($event)"
-         [dataSource]="dataSource" multiTemplateDataRows
-         class="mat-elevation-z8">
+  <div class="selectors">
+    <mat-form-field class="select">
+      <mat-select class="white" (selectionChange)="onChangeAn($event)" placeholder="An">
+        <mat-option *ngFor="let an  of ani" [value]="an.value">
+          {{an.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <mat-form-field class="select">
+      <mat-select class="white" (selectionChange)="onChangeSemestru($event)" placeholder="Semestru">
+        <mat-option *ngFor="let semestru  of semestre" [value]="semestru.value">
+          {{semestru.viewValue}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+  </div>
+  <table mat-table matSort (matSortChange)="sortList($event)" [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
     <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
       <th mat-sort-header="{{column}}" *matHeaderCellDef> {{column}} </th>
-      <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      <td [ngClass]="{'red-class': column==notaFinala && element[column]<5}" mat-cell *matCellDef="let element">
+        {{element[column]}} </td>
     </ng-container>
 
     <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
     <ng-container matColumnDef="expandedDetail">
       <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-        <div class="example-element-detail"
-             [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
           <div class="example-element-description">
-            {{"Data Promovarii:"+ element.dataPromovarii+"    Cod Materie: "+element.codMaterie}}
+            <div *ngIf="element.dataPromovarii!=''">
+              {{"Data notei finale:"+ element.dataPromovarii }}
+            </div>
+            <div>
+              {{"Cod Materie:" + element.codMaterie}}
+            </div>
             <span class="example-element-description-attribution">
             </span>
           </div>
@@ -44,11 +46,9 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row  *matHeaderRowDef="columnsToDisplay"></tr>
-    <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
-        class="example-element-row"
-        [class.example-expanded-row]="expandedElement === element"
-        (click)="expandedElement = element">
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row"
+      [class.example-expanded-row]="expandedElement === element" (click)="expandedElement = element">
     </tr>
     <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
   </table>
