--- a/PreAcademicInfoFront/webapp/src/app/student/home/home.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/student/home/home.component.scss
@@ -60,3 +60,7 @@ tr.example-element-row:not(.example-expanded-row):hover {
 .example-element-description-attribution {
   opacity: 0.5;
 }
+
+.red-class{
+  color: crimson;
+}
