--- a/PreAcademicInfoFront/webapp/src/app/student/teacher-view/teacher-view.component.scss
+++ b/PreAcademicInfoFront/webapp/src/app/student/teacher-view/teacher-view.component.scss
@@ -8,7 +8,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 300px;
+  width: 230px;
   height: 300px;
   margin: -150px;
   float: left;
@@ -17,8 +17,8 @@ body {
 
 .content {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: 230px;
+  height: 300px;
   box-shadow: 0 0 15px rgba(0,0,0,0.1);
 
   transition: transform 1s;
@@ -33,8 +33,8 @@ body {
 .front,
 .back {
   position: absolute;
-  height: 100%;
-  width: 100%;
+  height: 300px;
+  width: 230px;
   background: white;
   line-height: 300px;
   color: #03446A;
@@ -48,4 +48,19 @@ body {
   background: #03446A;
   color: white;
   transform: rotateY( 180deg );
+}
+
+.mat-card-subtitle:not(:first-child), .mat-card-title:not(:first-child) {
+  margin-top: -270px;
+}
+
+.mat-grid-tile {
+  /* display: block; */
+  /* position: absolute; */
+   overflow: visible; 
+}
+
+.imgStyle {
+  width: 230px;
+  height: 250px;
 }
